egonlang-core/res/examples/invalid/block_expr_mismatch_type_prefix_bang_list.eg
{ ![1, 2, 3] };

// out: TypeError: mismatched types: expected type `bool` but received `list<number>`